--- a/web.html
+++ b/web.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+   <div>
+    <h2>my-website here</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, minus!</p>
+   </div>
+
 </body>
 </html>
